change index title

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>CUI-Managemnet</title>
+    <title>CUI-Management</title>
 
     <!-- Custom fonts for this template-->
     <link href="fonts/fontawesome/css/fontawesome-all.min.css" rel="stylesheet" type="text/css">
